--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: set timezone
+- name: force server timezone
   timezone:
     name: "{{ timezone_name }}"
 
@@ -20,3 +20,7 @@
     owner: root
     group: root
     mode: 0644
+
+- include: pip.yml
+
+- include: ntp.yml
