--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 
+- name: set timezone
+  timezone:
+    name: "{{ timezone_name }}"
+
 - name: install apt packages
   apt:
     name:  "{{ item }}"
