--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,7 @@
 - name: set timezone
   timezone:
     name: "{{ timezone_name }}"
+  when: "{{ ansible_version.full|version_compare( '2.2', operator='ge', strict=False ) and update_timezone }}"
 
 - name: install apt packages
   apt:
@@ -20,7 +21,10 @@
     owner: root
     group: root
     mode: 0644
+  when: update_host_file
 
 - include: pip.yml
+  when: pip_enabled
 
 - include: ntp.yml
+  when: ntp_enabled
