Update readme & add license file

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,7 @@ timezone_name: Europe/Paris
 
 # Default apt packages to install
 init_apt_packages:
+  - apt-transport-https
   - vim
   - curl
   - wget
