--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,7 @@
   timezone:
     name: "{{ timezone_name }}"
   when: "{{ ansible_version.full|version_compare( '2.2', operator='ge', strict=False ) and update_timezone }}"
+  tags: timezone_config
 
 - name: install apt packages
   apt:
@@ -22,9 +23,12 @@
     group: root
     mode: 0644
   when: update_host_file
+  tags: etc_hosts_config
 
 - include: pip.yml
   when: pip_enabled
+  tags: pip
 
 - include: ntp.yml
   when: ntp_enabled
+  tags: ntp
