--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: set timezone
   timezone:
     name: "{{ timezone_name }}"
-  when: "{{ ansible_version.full|version_compare( '2.2', operator='ge', strict=False ) and update_timezone }}"
+  when: update_timezone
   tags: timezone_config
 
 - name: install apt packages
